# Solidity-Gas-Optimizoor

./: .gitignore  Cargo.toml  README.md  docs.md  research.md  setup.md
ast/: Cargo.toml
ast/src/: assembly.rs  contract.rs  expression.rs  function.rs  lib.rs  node.rs  source.rs  statement.rs  type_name.rs
cli/: Cargo.toml  main.rs
examples/: struct_pack.txt
examples/unoptimized_contracts/: example.md  example_struct.json  struct_packing.sol
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
optimizer/: Cargo.toml
optimizer/src/: lib.rs  struct_packing.rs
parser/: Cargo.toml
parser/src/: assembly.rs  contract.rs  error.rs  expression.rs  function.rs  lib.rs  mock.rs  nested.rs  source.rs  statement.rs  type_name.rs
src/: main.rs
src/ast/: assembly.rs  ast.rs  contract.rs  expression.rs  function.rs  mod.rs  source.rs  statement.rs  type_name.rs
src/lexer/: lexer.rs  mod.rs  printer.rs  token.rs
src/parser/: assembly.rs  contract.rs  error.rs  function.rs  nested.rs  parser.rs  source.rs
