[package]
name = "optimizoor-ast"
version = "0.1.0"
edition = "2021"
authors = ["Yong Kang <chiayongkang@hotmail.com>", "Chng Xiang Lin"]
license = "GPL-3.0"
repository = "https://github.com/ExtremelySunnyYK/Solidity-Gas-Optimizoor"
description = "Abstract Syntax Tree for the Solidity language"

[dependencies]
toolshed = "0.6"

[dev-dependencies]
pretty_assertions = "0.5"
