[package]
name = "optimizoor-lexer"
version = "0.1.0"
edition = "2021"
authors = ["Yong Kang <chiayongkang@hotmail.com>", "Chng Xiang Lin"]
license = "GPL-3.0"
repository = "https://github.com/ExtremelySunnyYK/Solidity-Gas-Optimizoor"
description = "A high performance Solidity language Lexer"

[dependencies]
logos = { version = "0.7.7", features = ["nul_term_source"] }
