[package]
name = "optimizoor-cli"
version = "0.1.0"
edition = "2024"
authors = ["Yong Kang <chiayongkang@hotmail.com>", "Chng Xiang Lin"]
license = "GPL-3.0"
repository = "https://github.com/ExtremelySunnyYK/Solidity-Gas-Optimizoor"
description = "A high performance Solidity language Lexer"


[dependencies]
toolshed = "0.6"
lunarity-lexer = "0.2.1"
lunarity-ast = "0.2"

[dev-dependencies]
pretty_assertions = "0.5"
