[package]
name = "optimizoor-parser"
version = "0.1.0"
edition = "2021"
authors = ["Yong Kang <chiayongkang@hotmail.com>", "Chng Xiang Lin"]
license = "GPL-3.0"
repository = "https://github.com/ExtremelySunnyYK/Solidity-Gas-Optimizoor"
description = "A high performance Solidity language Lexer"


[dependencies]
toolshed = "0.6"
optimizoor-lexer = {path = "../lexer" }
optimizoor-ast = { path = "../ast" }

[dev-dependencies]
pretty_assertions = "0.5"
